--- a/trac/ticket/templates/report_view.html
+++ b/trac/ticket/templates/report_view.html
@@ -41,13 +41,13 @@
         </form>
       </div>
       <py:if test="report.id != -1">
-        <h2 py:if="paginator.has_more_pages">
+        <h2 class="report-result" py:if="paginator.has_more_pages">
           Results <span class="numresults">(${paginator.displayed_items()})</span>
         </h2>
         <xi:include href="page_index.html" />
       </py:if>
       <py:for each="value_for_group, row_group in row_groups">
-        <h2 py:if="value_for_group">$value_for_group
+        <h2 class="report-result" py:if="value_for_group">$value_for_group
         <span class="numrows" py:with="cnt = len(row_group)">(${cnt or 'No'} match${cnt != 1 and 'es' or ''})</span></h2>
         <table class="listing ${report.id == -1 and 'reports' or 'tickets'}">
           <thead>
