--- a/trac/search/templates/search.html
+++ b/trac/search/templates/search.html
@@ -53,7 +53,7 @@
               <dt><a href="${result.href}" class="searchable">${result.title}</a></dt>
               <dd class="searchable">${result.excerpt}</dd>
               <dd>
-                <span class="author">By ${authorinfo(result.author)}</span> &mdash;
+                <py:if test="result.author"><span class="author">By ${format_author(result.author)}</span> &mdash;</py:if>
                 <span class="date">${result.date}</span>
               </dd>
             </py:for>
